style.css
/* HEADER */

:root {
    --clr-primary-red: #d72322;
    --clr-primary-green: #4cb260;
  }

  
  * {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 400;
    text-decoration: none;
    color: black;
  }
  
  /* END OF HEADER */

  /* NAVIGATION */

nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
}

    /* landscapes */

.gotoland {
    font-size: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    background-color: var(--clr-primary-green);
    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
    border-radius: 1px;
    width: 125px;
    height: 80px;
    transition: all .5s ease-out;
}

.gotoland span {
    padding: 0 5%;
}

.gotoland:hover {
    width: 100vw;
    height: 80px;
}

#see-land {
    display: none;
}

.gotoland:hover #see-land{
    display: inline;
}

.gotoland:hover #landgone{
    display: none;
}

.gotoland:hover #cover-landscapes{
    display: none;
}


.inland {
    width: 100vw;
}


    /* portraits */


.gotoport {
    font-size: 20px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    text-align: center;
    background-color: var(--clr-primary-red);
    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
    border-radius: 1px;
    width: 80px;
    height: 125px;
    transition: all 0.5s ease-in-out;
}

.gotoport span {
    padding: 5% 0;
}

.gotoport:hover {
    width: 80px;
    height: 100vh;
}

#see-port {
    display: none;
    writing-mode: vertical-lr;
}


.gotoport:hover #see-port{
    display: inline;
}

#cover-portraits {
    writing-mode: vertical-lr;
    display: flex;
    flex-direction: row;
    justify-content: center;    
}

.gotoport:hover #cover-portraits{
    display: none;
}

.inport {
    height: 100vh;
}

.portrait-back {
    writing-mode: vertical-lr;
}


/* IPAD */


@media (max-width: 800px) {

    /* landscapes */

    .gotoland {
        font-size: 16px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        background-color: var(--clr-primary-green);
        box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
        border-radius: .5px;
        width: 100vw;
        height: 5vh;
        transform: rotate(180deg);
        transition: none;
    }

    .gotoland span {
        padding: 0 5%;
    }

     #see-land {
        display: none;
    }

    /* portraits */

    .gotoport {
        font-size: 16px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        text-align: center;
        background-color: var(--clr-primary-red);
        box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.2);
        border-radius: .5px;
        width: 8vw;
        height: 95vh;
        transition: none;
    }

    .gotoport span {
        padding: 5% 0;
    }

    #see-port {
        display: none;
    }

    #cover-portraits {
        writing-mode: vertical-lr;
        display: flex;
        flex-direction: column;
        justify-content: center;
    } 

    #see-port {
        writing-mode: vertical-lr;
    }

    .portrait-back {
        writing-mode: vertical-lr;
        display: flex;
        flex-direction: row;
        justify-content: center;    
    }

}

/* IPHONE SE */


@media (max-width:350px) {

    /* landscapes */

    .gotoland {
        position: relative;
        font-size: 12px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        background-color: var(--clr-primary-green);
        box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.1);
        width: 100vw;
        height: 5vh;
        transform: rotate(180deg);
        transition: none;
    }

    .gotoland span {
        padding: 0 5%;
    }

    #see-land {
        display: none;
    }

    /* portraits */

    .gotoport {
        font-size: 12px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        background-color: var(--clr-primary-red);
        box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.1);
        width: 10vw;
        height: 95vh;
        transition: none;
    }

    .gotoport span {
        padding: 5% 0;
    }

    #see-port {
        display: none;
    }

    #cover-portraits {
        writing-mode: vertical-lr;
        display: flex;
        flex-direction: column;
        justify-content: center;
    } 

    #see-port {
        writing-mode: vertical-lr;
    }
}    

/* END OF NAVIGATION */

/* INDEX */

.hello-morten {
    font-size: 60px;
    display: flex;
    justify-content: center;
    padding: 30% 20%;
    position: absolute;
    z-index: 2000;
}

.morten-content-port {
    position: fixed;
    font-size: 20px;
    height: 100%;
    padding: 25%;
}

.morten-content-land {
    position: fixed;
    font-size: 20px;
    height: 100%;
    padding: 25%;
}

@media (max-width:800px) {

    .hello-morten {
        font-size: 40px;
        display: flex;
        justify-content: center;
        padding: 30% 20%;
        position: absolute;
        z-index: 2000;
    }

    .morten-content-port {
        font-size: 20px;
        display: flex;
        justify-content: center;
        left: 5%;
        padding: 30% 15%;
        position: absolute;
        height: 100%;
    }

    .morten-content-land {
        position: fixed;
        transform: rotate(90deg);
        font-size: 20px;
        padding: 5%;
        top: 35%;
        height: 35%;
        display: flex;
        flex-direction: row;
    }
  
}
/* ... */

